--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="content-block" id="content">
     <div class="central-block">
         <h1 class="form-title">Select an XML file</h1>
-        <input type="file"/>
+        <input type="file" id="xml_file"/>
         <button class="action-button" id="generatePDF" onClick="generatePDF()">Generate PDF</button>
         <h3 class="action-result">No PDF generated</h3>
     </div>
